--- a/week02/styles/temples-large.css
+++ b/week02/styles/temples-large.css
@@ -1,19 +1,52 @@
-main{
-    margin: 1rem auto;
-    max-width: 960px;
-    padding: .5rem;
-}
+/* Larger Views */
+@media only screen and (min-width:40em){
+    header{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
 
-.container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
-    grid-gap: 25px;
-    place-items: center;
-    margin-bottom: 1rem;
-}
+    nav ul{
+        justify-content: flex end;
+        flex-direction: row;
+    }
 
-img{
-    width: 100%;
-    height: auto;
-    margin: .5rem;
+    .navigation{
+        display: flex;
+    }
+
+    .navigation li {
+        display: block;
+        flex: 1 1 100%;
+    }
+
+    nav a {
+        text-align: center;
+        flex: 1 1 100%; /* from Navigation Menu using CSS Flex */
+    }
+
+    #menu {
+        display: none;
+    }
+
+    /* From CSS Images Effects */
+    main{
+        margin: 0 auto;
+        max-width: 75rem;
+        padding: .5rem;
+    }
+
+
+    .container{
+        display: grid;
+        grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+        gap: 1rem;
+        justify-content: center;
+    } 
+
+    img{
+        width: 100%;
+        height: auto;
+    }
+
 }
