--- a/project/styles/form.css
+++ b/project/styles/form.css
@@ -11,6 +11,8 @@
 
 body{
     font-family: Roboto,sans-serif;
+    background-color: var(--blue);
+
 }
 
 header{
@@ -27,12 +29,12 @@ header{
 header,
 main {
     margin: 0 auto;
-    text-align: center;
+    /* text-align: center; */
 }
 
 main{
     color: white;
-    background-color: var(--blue);
+    background-color: white;
 }
 
 h1 {
@@ -122,13 +124,145 @@ section{
 }
 
 
+/*----------- FORM STYLING ------- */
+.wf1 fieldset {
+    margin: 2rem 0;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    padding: .5rem 2%;
+}
+
+.wf1 legend {
+    color: #445ba9;
+    padding: 0.5rem;
+}
+
+.wf1 label {
+    display: block;
+    padding-top: 1rem;
+    color: #9c2c13;
+    font-size: .9rem;
+}
+
+.wf1 div{
+    padding-top: 1rem;
+    color: #445ba9;
+    font-size: .9rem;
+}
+
+.wf1 input[type="text"],
+.wf1 input[type="tel"],
+.wf1 input[type="email"],
+.wf1 input[type="url"],
+.wf1 input[type="date"],
+.wf1 select,
+.wf1 input[type="number"],
+.wf1 input[type="textarea"],
+textarea
+{
+    background-color: #eee;
+    display: block;
+    border: solid 1px #999;
+    border-radius: 6px;
+    padding: .75rem;
+    color: #555;
+    width: 100%;
+    max-width: 400px;
+    appearance: none;
+}
+
+
+.wf1 input[type="radio"],
+.wf1 input[type="checkbox"]{
+    margin-right: 6px;
+}
+
+/* STARS */
+/* use reverse flexbox to take advantage of flex-direction: reverse */
+.star-rating {
+    display: flex;
+    align-items: center;
+    width: 200px;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    margin-top: 10px;
+    position: relative;
+  }
+  /* hide the inputs */
+  .star-rating input {
+    display: none;
+  }
+  /* set properties of all labels */
+  .star-rating > label {
+    /* width: 30px; */
+    /* height: 30px; */
+    font-family: Arial;
+    font-size: 44px;
+    transition: 0.2s ease;
+    color: orange;
+  }
+  /* give label a hover state */
+  .star-rating label:hover {
+    color: #ff69b4;
+    transition: 0.2s ease;
+  }
+  .star-rating label:active::before {
+    transform:scale(1.1);
+  }
+  
+  /* set shape of unselected label */
+  .star-rating label::before {
+    content: '\2606';
+    position: absolute;
+    top: 0px;
+    line-height: 26px;
+  }
+  /* set full star shape for checked label and those that come after it */
+  .star-rating input:checked ~ label:before {
+    content:'\2605';
+  }
+  
+  @-moz-document url-prefix() {
+    .star-rating input:checked ~ label:before {
+    font-size: 36px;
+    line-height: 21px;
+    }
+  }  
+
+
+.wf1 input[type="submit"]{
+    border:none;
+    background-image: linear-gradient(#9c2c13,#6f200e);
+    color: #fff;
+    border-radius: 6px;
+    padding: .8rem;
+    width: 96%;
+    max-width: 400px;
+    margin: -1rem 2% 2rem 2%;
+    box-shadow: 1px 1px 4px #999;
+}
+
+.wf1 input:required{
+    border-left: solid 8px red;
+}
+
+.wf1 input:required:valid{
+    border-left: solid 8px green;
+}
+
+
+
+
+
 /* Larger Views */
 @media only screen and (min-width:38em){
+
     header{
         display: flex;
         align-items: center;
         justify-content: space-between;
     }
+
 
     nav ul{
         justify-content: flex end;
@@ -175,3 +309,4 @@ section{
     }
 
 }
+
