--- a/project/styles/recommendation.css
+++ b/project/styles/recommendation.css
@@ -121,6 +121,11 @@ section{
     padding: 1rem;
 }
 
+/* .container{
+    display: grid;
+    grid-template-columns: 1fr 1fr auto;
+} */
+
 
 /* Larger Views */
 @media only screen and (min-width:38em){
