--- a/project/styles/form.css
+++ b/project/styles/form.css
@@ -11,7 +11,7 @@
 
 body{
     font-family: Roboto,sans-serif;
-    background-color: var(--blue);
+    /* background-color: var(--blue); */
 
 }
 
@@ -34,7 +34,7 @@ main {
 
 main{
     color: white;
-    background-color: white;
+    background-color: var(--blue);
 }
 
 h1 {
@@ -177,57 +177,6 @@ textarea
     margin-right: 6px;
 }
 
-/* STARS */
-/* use reverse flexbox to take advantage of flex-direction: reverse */
-.star-rating {
-    display: flex;
-    align-items: center;
-    width: 200px;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-    margin-top: 10px;
-    position: relative;
-  }
-  /* hide the inputs */
-  .star-rating input {
-    display: none;
-  }
-  /* set properties of all labels */
-  .star-rating > label {
-    /* width: 30px; */
-    /* height: 30px; */
-    font-family: Arial;
-    font-size: 44px;
-    transition: 0.2s ease;
-    color: orange;
-  }
-  /* give label a hover state */
-  .star-rating label:hover {
-    color: #ff69b4;
-    transition: 0.2s ease;
-  }
-  .star-rating label:active::before {
-    transform:scale(1.1);
-  }
-  
-  /* set shape of unselected label */
-  .star-rating label::before {
-    content: '\2606';
-    position: absolute;
-    top: 0px;
-    line-height: 26px;
-  }
-  /* set full star shape for checked label and those that come after it */
-  .star-rating input:checked ~ label:before {
-    content:'\2605';
-  }
-  
-  @-moz-document url-prefix() {
-    .star-rating input:checked ~ label:before {
-    font-size: 36px;
-    line-height: 21px;
-    }
-  }  
 
 
 .wf1 input[type="submit"]{
